[package]
name = "talk"
version = "0.1.0"
authors = ["Maiddog <maiddogsrl@gmail.com>"]

[dependencies]
log = "0.3"
nanomsg = "0.6"
ngrams = "1.0"
pretty_env_logger = "0.1.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.12"
features = ["bundled", "serde_json"]