[package]
name = "talk"
version = "0.1.0"
authors = ["Maiddog <maiddogsrl@gmail.com>"]

[dependencies]
rand = "0.5"
pretty_env_logger = "0.2"
nanomsg = "0.7"
log = "0.4"
clap = "2.32"
ngrams = "1.0"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
lto = true

[profile.bench]
lto = true