[package]
name = "talk"
version = "0.1.0"
authors = ["Maiddog <maiddogsrl@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.0"
clap = "2.32"
log = "0.4"
ngrams = "1.0"
pretty_env_logger = "0.2"
rand = "0.5"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]
nanomsg = "0.7"

[profile.release]
lto = true

[profile.bench]
lto = true